# crm_integration

./: .env  .gitignore  pyproject.toml
logs/: app.log.1  app.log.2  app.log.3
src/addons/integrations/: hooks.py  plugin_manager.py
src/addons/integrations/plugins/: capsule.py  hubspot.py
src/api/: dependencies.py  handlers.py  main.py
src/api/entrypoints/: callbacks.py  routes.py
src/config/: logconfig.py  settings.py
src/core/: exceptions.py  middleware.py
src/crmdata/: state.json  token.json
src/crmdata/contacts/: capsule.json  hubspot.json
