[project]
name = "crmintegration"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "palpasa4", email = "palpasa04@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "pydantic-settings>=2.8.1",
    "pluggy>=1.5.0",
    "requests>=2.32.3",
    "black>=25.1.0",
    "httpx>=0.28.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crmintegration"]

[tool.rye.scripts]
server="fastapi dev src/api/main.py"
